--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ tqdm==4.67.1
 jupyterlab==4.3.4
 xlrd==2.0.1
 openai==1.60.2
-nltk==3.9.1
 tiktoken==0.8.0
 scikit-learn==1.6.1
+matplotlib==3.9.4
+scipy==1.13.1
+imbalanced-learn==0.12.4
+seaborn==0.13.2
